--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -9,6 +9,15 @@
 
     <script>
 
+      if(!window.rapidload_optimizer){
+        window.rapidload_optimizer = {
+          page_optimizer_package_base : "/"
+        }
+      }
+
+      if(!window.rapidload_optimizer.page_optimizer_package_base){
+        window.rapidload_optimizer.page_optimizer_package_base = "/"
+      }
 //      window.rapidload_optimizer = {
 //        "load_optimizer": "1",
 //              "page_optimizer_package_base": "http://rapidload.local/wp-content/plugins/autoptimize-unusedcss/includes/admin/page-optimizer/dist",
