--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="manifest" href="/manifest.webmanifest" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RapidLoad Page Optimizer</title>
-
     <script>
-
       if(!window.rapidload_optimizer){
         window.rapidload_optimizer = {
           page_optimizer_package_base : "/"
@@ -18,6 +11,14 @@
       if(!window.rapidload_optimizer.page_optimizer_package_base){
         window.rapidload_optimizer.page_optimizer_package_base = "/"
       }
+    </script>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RapidLoad Page Optimizer</title>
+
+    <script>
 //      window.rapidload_optimizer = {
 //        "load_optimizer": "1",
 //              "page_optimizer_package_base": "http://rapidload.local/wp-content/plugins/autoptimize-unusedcss/includes/admin/page-optimizer/dist",
