--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -10,11 +10,11 @@
     <script>
       if(!window.rapidload_optimizer){
         window.rapidload_optimizer = {
-          page_optimizer_package_base : "/"
+          page_optimizer_package_base : "https://autoptimize-unusedcss.vercel.app/"
         }
       }
       if(window.rapidload_optimizer && !window.rapidload_optimizer.page_optimizer_package_base){
-        window.rapidload_optimizer.page_optimizer_package_base = "/"
+        window.rapidload_optimizer.page_optimizer_package_base = "https://autoptimize-unusedcss.vercel.app/"
       }
      // window.rapidload_optimizer = {
      //   "load_optimizer": "1",
