--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -123,17 +123,20 @@
       document.addEventListener('DOMContentLoaded', () => {
         let container = document.getElementById('rapidload-page-optimizer')
         let popup = document.getElementById('popup')
-        new window.RapidLoadOptimizer({
-          container,
-          popup,
-          showOptimizer: false,
-          // global: true,
-          // mode: 'onboard',
-          modeData: {
-            connect_url: 'http://localhost:5173/',
-            target: '_blank'
-          },
-        });
+        console.log(window.RapidLoadOptimizer)
+        setTimeout(()=>{
+          new window.RapidLoadOptimizer({
+            container,
+            popup,
+            showOptimizer: false,
+            // global: true,
+            // mode: 'onboard',
+            modeData: {
+              connect_url: 'http://localhost:5173/',
+              target: '_blank'
+            },
+          });
+        },10000)
       })
     </script>
   </body>
