fix: load rl constructor on script load

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -136,6 +136,6 @@
         });
       }
     </script>
-    <script type="module" onload="loadRL" src="/src/main.tsx"></script>
+    <script type="module" onload="() => { loadRL() }" src="/src/main.tsx"></script>
   </body>
 </html>
