--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -8,14 +8,6 @@
     <title>RapidLoad Page Optimizer</title>
 
     <script>
-      if(!window.rapidload_optimizer){
-        window.rapidload_optimizer = {
-          page_optimizer_package_base : window.location.href.toString().replace(/\/+$/, '')
-        }
-      }
-      if(window.rapidload_optimizer && !window.rapidload_optimizer.page_optimizer_package_base){
-        window.rapidload_optimizer.page_optimizer_package_base =  window.location.href.toString().replace(/\/+$/, '')
-      }
      // window.rapidload_optimizer = {
      //   "load_optimizer": "1",
      //         "page_optimizer_package_base": "http://rapidload.local/wp-content/plugins/autoptimize-unusedcss/includes/admin/page-optimizer/dist",
@@ -126,6 +118,7 @@
           container,
           popup,
           showOptimizer: false,
+          shadowRoot:false,
           // global: true,
           // mode: 'onboard',
           modeData: {
