feat: add origin url

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -8,7 +8,7 @@
     <title>RapidLoad Page Optimizer</title>
 
     <script>
-      window.rapidload_page_optimizer_package_base = '/';
+      window.rapidload_page_optimizer_package_base = window.location.origin + '/';
      // window.rapidload_optimizer = {
      //   "load_optimizer": "1",
      //         "page_optimizer_package_base": "http://rapidload.local/wp-content/plugins/autoptimize-unusedcss/includes/admin/page-optimizer/dist",
