feat: add more checks to plugin option loading via the window object. revert back to earlier config for the base

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -8,7 +8,10 @@
     <title>RapidLoad Page Optimizer</title>
 
     <script>
-      window.rapidload_page_optimizer_package_base = window.location.origin ;
+      window.rapidload_optimizer = {
+        page_optimizer_package_base: window.location.origin + "/__dynamic_base__"
+      };
+
      // window.rapidload_optimizer = {
      //   "load_optimizer": "1",
      //         "page_optimizer_package_base": "http://rapidload.local/wp-content/plugins/autoptimize-unusedcss/includes/admin/page-optimizer/dist",
@@ -109,6 +112,8 @@
     <div id="rapidload-page-optimizer"></div>
     <div id='popup'>
       hover me to show popup
+      <br>
+      <button onclick="loadRL()">load ui</button>
     </div>
 
     <script>
