feat: testTransformHTML in vercel

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -9,7 +9,7 @@
 
     <script>
       window.rapidload_optimizer = {
-        page_optimizer_package_base: window.location.origin + "/__dynamic_base__"
+        page_optimizer_package_base: window.location.origin
       };
 
      // window.rapidload_optimizer = {
