feat: add support to define default optimize url for titan

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -9,7 +9,8 @@
 
     <script>
       window.rapidload_optimizer = {
-        page_optimizer_package_base: window.location.origin
+        page_optimizer_package_base: window.location.origin,
+        optimizer_url : '%VITE_OPTIMIZER_URL%',
       };
 
      // window.rapidload_optimizer = {
