feat: add ajax url to html

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -11,6 +11,7 @@
       window.rapidload_optimizer = {
         page_optimizer_package_base: window.location.origin,
         optimizer_url : '%VITE_OPTIMIZER_URL%',
+        ajax_url : '%VITE_OPTIMIZER_URL%wp-admin/admin-ajax.php',
       };
 
      // window.rapidload_optimizer = {
