fix: titan crashes with Google Translate feat: add bugsnag error reporting fix: Customize button select

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -118,6 +118,16 @@
       hover me to show popup
       <br>
       <button onclick="loadRL()">load ui</button>
+
+      <p>
+
+        Title: مرتفعات الجبال وغموضها
+        (The Mystique of Mountain Heights)
+
+        الجبال هي رموز الثبات والسمو، تقف شامخة تحت السماء الزرقاء كأنها تحرس أسرار الطبيعة. في أعاليها، تجد الهواء النقي الذي ينعش الروح ويمنح الشعور بالحرية. بينما تتسلق تلك المرتفعات، يصبح العالم تحت قدميك صغيرًا، وتبدأ بالشعور بقدرتك على التغلب على كل ما يعترض طريقك.
+
+        الجبال ليست مجرد تكوينات جغرافية؛ إنها تشكل جزءًا من ثقافات الشعوب وسردياتهم. قصص الأبطال والحكماء غالبًا ما ترتبط بالجبال، وكأنها مواقع للحصول على الحكمة والنقاء. في كل رحلة إلى قمم الجبال، هناك شعور بالانتصار على الذات، وكأنك تقترب خطوة نحو الأفق المجهول والمليء بالإمكانيات.
+      </p>
     </div>
 
     <script>
