--- a/includes/admin/page-optimizer/dist-debug/index.html
+++ b/includes/admin/page-optimizer/dist-debug/index.html
@@ -11,8 +11,8 @@
 
       window.rapidload_optimizer = {
         page_optimizer_package_base: window.location.origin,
-        optimizer_url : '%VITE_OPTIMIZER_URL%',
-        ajax_url : '%VITE_SERVER_ROOT%wp-admin/admin-ajax.php',
+        optimizer_url : 'https://rapidload.io/',
+        ajax_url : 'http://rapidload.local/wp-admin/admin-ajax.php',
       };
 
 
@@ -117,7 +117,7 @@
     
     <script>
 (function(){
-var preloads = [{"parentTagName":"head","tagName":"link","attrs":{"rel":"manifest","href":"/manifest.webmanifest"}},{"parentTagName":"head","tagName":"script","attrs":{"type":"module","crossorigin":"","src":"/assets/index.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/core-vendor.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/vendor.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/animations.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"stylesheet","href":"/assets/index.css"}}];
+var preloads = [{"parentTagName":"head","tagName":"link","attrs":{"rel":"manifest","href":"/manifest.webmanifest"}},{"parentTagName":"head","tagName":"script","attrs":{"type":"module","crossorigin":"","src":"/assets/index.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/core-vendor.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/vendor.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/animations.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"stylesheet","crossorigin":"","href":"/assets/index2.css"}}];
 function setAttribute(target, attrs) {
 for (var key in attrs) {
   target.setAttribute(key, attrs[key]);
@@ -148,6 +148,15 @@ document.getElementsByTagName(item.parentTagName)[0].appendChild(childNode);
       hover me to show popup
       <br>
       <button onclick="loadRL()">load ui</button>
+
+      <p>
+        مرتفعات الجبال وغموضها
+        مرتفعات الجبال وغموضها
+
+        مرتفعات الجبال وغموضها
+
+        مرتفعات الجبال وغموضها
+      </p>
     </div>
 
     <script>
@@ -170,6 +179,5 @@ document.getElementsByTagName(item.parentTagName)[0].appendChild(childNode);
       }
 
     </script>
-    
   </body>
 </html>
