--- a/includes/admin/page-optimizer/dist-debug/index.html
+++ b/includes/admin/page-optimizer/dist-debug/index.html
@@ -12,7 +12,8 @@
       window.rapidload_optimizer = {
         page_optimizer_package_base: window.location.origin,
         optimizer_url : 'https://rapidload.io/',
-        ajax_url : 'http://rapidload.local/wp-admin/admin-ajax.php',
+        ajax_url : 'https://rapidload.local/wp-admin/admin-ajax.php',
+        api_root: '%VITE_API_ROOT%/api/v1'.includes('VITE') ? 'https://api.rapidload.io/api/v1' : '%VITE_API_ROOT%/api/v1'
       };
 
 
