fix: connect your account dialog not showing data when report is generated

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -141,7 +141,7 @@
 
           shadowRoot:false,
           // global: true,
-          mode: 'onboard',
+          // mode: 'onboard',
           modeData: {
             connect_url: 'http://localhost:5174/',
             target: '_blank'
