chore: build optimizer

--- a/includes/admin/page-optimizer/dist-debug/index.html
+++ b/includes/admin/page-optimizer/dist-debug/index.html
@@ -11,12 +11,15 @@
 
       window.rapidload_optimizer = {
         page_optimizer_package_base: window.location.origin,
+        rapidload_version: '2.2.26',
         optimizer_url : 'https://rapidload.io/',
         ajax_url : 'https://rapidload.local/wp-admin/admin-ajax.php',
         api_root: '%VITE_API_ROOT%/api/v1'.includes('VITE') ? 'https://api.rapidload.io/api/v1' : '%VITE_API_ROOT%/api/v1'
       };
 
 
+
+    
      // window.rapidload_optimizer = {
      //   "load_optimizer": "1",
      //         "page_optimizer_package_base": "http://rapidload.local/wp-content/plugins/autoptimize-unusedcss/includes/admin/page-optimizer/dist",
