feat: merge master into dashboard

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -128,7 +128,7 @@
         let popup = document.getElementById('popup')
         new window.RapidLoadOptimizer({
           container,
-          popup,
+          // popup,
           showOptimizer: true,
 
           shadowRoot:false,
