--- a/includes/admin/page-optimizer/src/index.css
+++ b/includes/admin/page-optimizer/src/index.css
@@ -163,7 +163,6 @@
   top: -10px;
   animation: fadeInFromTop 3s ease forwards;
 }
-
-.rapidload-page-optimizer{
+#rapidload-page-optimizer{
   margin-left: -20px
 }
