feat: add One Click booster widget. with basic perf and chat widget

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -118,9 +118,9 @@
   <body>
 
     <div id="rapidload-page-optimizer"></div>
-    <div id='popup'>
+    <!-- <div id='popup'>
       hover me to show popup
-    </div>
+    </div> -->
 
     <script>
       function loadRL() {
