--- a/includes/admin/page-optimizer/dist-debug/index.html
+++ b/includes/admin/page-optimizer/dist-debug/index.html
@@ -121,7 +121,7 @@
     
     <script>
 (function(){
-var preloads = [{"parentTagName":"head","tagName":"link","attrs":{"rel":"manifest","href":"/manifest.webmanifest"}},{"parentTagName":"head","tagName":"script","attrs":{"type":"module","crossorigin":"","src":"/assets/index.CDuGZl69.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/core-vendor.a21Wwx5s.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/vendor.C2Ge5RaU.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/animations.CWk52Myu.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"stylesheet","crossorigin":"","href":"/assets/index.Cyv21uzR.css"}}];
+var preloads = [{"parentTagName":"head","tagName":"link","attrs":{"rel":"manifest","href":"/manifest.webmanifest"}},{"parentTagName":"head","tagName":"script","attrs":{"type":"module","crossorigin":"","src":"/assets/index.0wP1Sc7h.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/core-vendor.a21Wwx5s.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/vendor.B6ncEjG2.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"modulepreload","crossorigin":"","href":"/assets/animations.Be10g_kJ.js"}},{"parentTagName":"head","tagName":"link","attrs":{"rel":"stylesheet","crossorigin":"","href":"/assets/index.CUuCsFC3.css"}}];
 function setAttribute(target, attrs) {
 for (var key in attrs) {
   target.setAttribute(key, attrs[key]);
@@ -148,9 +148,9 @@ document.getElementsByTagName(item.parentTagName)[0].appendChild(childNode);
   <body>
 
     <div id="rapidload-page-optimizer"></div>
-    <div id='popup'>
+    <!-- <div id='popup'>
       hover me to show popup
-    </div>
+    </div> -->
 
     <script>
       function loadRL() {
