--- a/includes/admin/page-optimizer/src/index.css
+++ b/includes/admin/page-optimizer/src/index.css
@@ -164,3 +164,19 @@
   animation: fadeInFromTop 3s ease forwards;
 }
 
+
+
+@keyframes wave {
+  0% {
+    transform: scale(0.3);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+.wave-animation {
+  animation: wave 2s infinite ease-out;
+}
