feat: remove manifest and update fav icon

--- a/includes/admin/page-optimizer/index.html
+++ b/includes/admin/page-optimizer/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="manifest" href="/manifest.webmanifest" />
+  <link rel="icon" type="image/svg+xml" href="/logo-icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RapidLoad Demo - Experience RapidLoad Today</title>
 
