--- a/includes/admin/page-optimizer/src/index.css
+++ b/includes/admin/page-optimizer/src/index.css
@@ -9,69 +9,71 @@
 }
 
 @layer base {
-  :host, :root {
+
+  :host,
+  :root {
     --reactour-accent: #0e172a;
     --background: 0 0% 100%;
     --foreground: 240 10% 3.92%;
- 
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.92%;
- 
+
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.92%;
- 
+
     --border: 0 0% 88%;
     --input: 214.3 31.8% 91.4%;
- 
+
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
- 
+
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
 
     --accent: 0 0% 93%;
     --accent-foreground: 0 0% 11.2%;
- 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
- 
+
     --ring: 215 20.2% 65.1%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .rapidload-dark {
     --reactour-accent: #fafafa;
     --background: 240 10% 3.92%;
     --foreground: 210 40% 98%;
- 
+
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
- 
+
     --popover: 240 10% 3.92%;
     --popover-foreground: 210 40% 98%;
- 
+
     --card: 240 10% 3.92%;
     --card-foreground: 210 40% 98%;
- 
+
     --border: 0 0% 12%;
-    --input:0 0% 12%;
- 
+    --input: 0 0% 12%;
+
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
- 
+
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
- 
+
     --accent-foreground: 0 0% 93%;
     --accent: 0 0% 11.2%;
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 85.7% 97.3%;
- 
+
     --ring: 217.2 32.6% 17.5%;
   }
 }
@@ -129,6 +131,7 @@
   from {
     stroke-dashoffset: 1000;
   }
+
   to {
     stroke-dashoffset: 0;
   }
@@ -137,10 +140,12 @@
 .optimizer-show-button-fade-in {
   animation: fadeIn 0.5s ease-in-out;
 }
+
 @keyframes fadeIn {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -151,6 +156,7 @@
     opacity: 0;
     transform: translateY(-10px);
   }
+
   100% {
     opacity: 1;
     transform: translateY(0);
@@ -166,4 +172,10 @@
 
 
 
+.demo-active {
+  transform: translateY(-50px) translateZ(0px) perspective(2000px) rotateY(0deg) rotateX(0deg) scale(1);
+}
 
+.demo-inactive {
+  transform: translateY(-25%) perspective(2000px) rotateY(0deg) rotateX(40deg) scale(0.8);
+}
