changes on onboard removed contact us

--- a/includes/admin/page-optimizer/src/index.css
+++ b/includes/admin/page-optimizer/src/index.css
@@ -251,6 +251,10 @@
       opacity: 0;
       transform: translateX(-50%);
   }
+  50% { 
+    opacity: 0;
+    transform: translateX(-25%);
+  }
   100% {
       opacity: 1;
       transform: translateX(0);
@@ -263,11 +267,9 @@
 
 @keyframes slideOutFromCenter {
   0% { 
-      opacity: 0;
       transform: translateX(50%);
   }
   100% {
-      opacity: 1;
       transform: translateX(0%);
   }
 }
