--- a/assets/css/uucss_global.css
+++ b/assets/css/uucss_global.css
@@ -1042,12 +1042,12 @@ body.rl-page-optimizer-loaded #wpbody-content>.notice{
     margin-left: 3px;
     background-color: #ffaa34;
     width: 69px;
-    border-radius: 5px;
-    margin-top: 4px;
-    max-height: 17px;
+    border-radius: 3px;
+    margin-top: 5px;
+    max-height: 18px;
     display: flex;
     justify-content: center;
-    padding: 3px;
+    padding: 1px 2px;
 }
 
 #wpadminbar .rl-input-test-mode{
