fix feedback popup

--- a/assets/css/utils/uucss_feedback.css
+++ b/assets/css/utils/uucss_feedback.css
@@ -1,9 +1,9 @@
 
-tr[data-slug="rapidload-ai-optimize-web-vitals-automatically"] span.deactivate{
+tr[data-slug="unusedcss"] span.deactivate{
     position: relative;
 }
 
-tr[data-slug="rapidload-ai-optimize-web-vitals-automatically"] .row-actions img{
+tr[data-slug="unusedcss"] .row-actions img{
     float: none;
 }
 
